Try dockerfile variants in gitlab-ci